# jetson-orin-webgpio

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  gpio_pins.dts  jetsonhacks-device-tree-overlays.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
jetson_orin_webgpio/: __init__.py  app.py
jetson_orin_webgpio/static/css/: style.css
jetson_orin_webgpio/static/js/: app.js
jetson_orin_webgpio/templates/: index.html
